# partial-tables

./: README.md  pyproject.toml
.github/actions/setup-env/: action.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: publish-to-pypi.yml  run_tests.yml
partial_tables/: __init__.py  partial_table.py
tests/: conftest.py  docker-compose.yml
tests/integration/: conftest.py  test_partial_table.py  test_sqlalchemy.py  test_sqlmodel.py
tests/integration/database/: __init__.py  sqlalchemy_tables.py  sqlmodel_tables.py  tables.py
