[project]
name = "partial-tables"
version = "0.0.2"
description = "Partial Table Models for SQLAlchemy and SQLModel"
authors = [
    { name = "Julien Kmec", email = "me@julien.dev" },
]
readme = "README.md"
packages = [{include = "partial_tables"}]
requires-python = ">=3.11,<3.15"
dependencies = [
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "sqlalchemy-utils>=0.42.1",
    "psycopg2-binary>=2.9.12",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest>=9.1.1",
    "pytest-docker>=3.2.5",
    "pytest-sqlalchemy>=0.3.0",
]

[project.urls]
repository = "https://github.com/julien777z/partial-tables"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
